# james.hoctor.xyz

./: .csslintrc  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .yamllint  Makefile  package-lock.json  package.json  pelicanconf.py  publishconf.py  pyproject.toml  readme.md  redact_text_test.txt  tasks.py  todo.txt
.forgejo/workflows/: block-drafts.yml  build-drafts.yml  build.yml  ci.yml  quality.yml
automation/: build-drafts.sh  check-no-drafts.sh  mirror-redacted.sh  mirror_redacted.sh  modify-post.sh  new-post.sh  publish-post.sh  retitle-post.sh
content/: announcing-my-new-thingiverse.md  i-switched-to-caddy.md  i-use-uv-to-simplify-certbot-automation.md  test-post.md  the-wallis-product-and-the-euler-poisson-integral.md
content/pages/: 404.md  about.md
content/static/: site.webmanifest
